# hf-hal-vortex-v1

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  DOCUMENTATION_INDEX.md  Kconfig  README.md  idf_component.yml
.github/workflows/: ci-cpp-analysis.yml  ci-cpp-lint.yml  ci-docs-linkcheck.yml  ci-docs-publish.yml  ci-markdown-lint.yml  ci-yaml-lint.yml  esp32-examples-build-ci.yml  release.yml
_config/: .clang-format  .clang-tidy  .markdownlint.json  .yamllint  Doxyfile  _config.yml  lychee.toml
_config/_includes/: footer_custom.html  head_custom.html
_config/_layouts/: minimal.html  print.html  workflow.html
cmake/: vortex_project_setup.cmake
docs/component-handlers/: ADC_MANAGER_README.md  BASE_CLASS_ENUMS_DOCUMENTATION_REPORT.md  COMM_CHANNELS_MANAGER_README.md  ENCODER_MANAGER_README.md  GPIO_MANAGER_README.md  IMU_MANAGER_README.md  LED_MANAGER_README.md  MOTOR_CONTROLLER_README.md  README.md  TEMPERATURE_MANAGER_README.md
docs/development/: ARCHITECTURE_GUIDELINES.md  BASEINTERFACE_REFERENCE.md  CMAKE_BUILD_CONTRACT.md  CODING_STANDARDS.md  COMPONENT_MANIFEST_GUIDE.md  DOCUMENTATION_STANDARDS.md  EMBEDDED_CODING_STANDARDS.md  README.md
docs/driver-handlers/: AS5047U_HANDLER_README.md  PCAL95555_HANDLER_README.md  README.md  TMC9660_HANDLER_README.md  TMC9660_TEMPERATURE_README.md
docs/hal/: README.md  architecture.md  managers-and-handlers.md
examples/: AdcManagerExample.cpp  Bno08xHandlerImuExample.cpp  BoardAwareTmc9660Example.cpp  ComprehensiveTemperatureExample.cpp  DumpAllStatisticsExample.cpp  EncoderManagerExample.cpp  GpioManagerExample.cpp  ImuManagerExample.cpp  LedManagerExample.cpp  LoggerExample.cpp  TemperatureManagerExample.cpp  VortexApiExample.cpp
examples/esp32/: .gitignore  CMakeLists.txt  README.md  app_config.yml  sdkconfig.defaults
examples/esp32/docs/: BENCH_MATRIX.md  BLDC_BRINGUP.md  BLDC_UART_BRINGUP.md  README.md  TMC9660_DEEP_AUDIT_REPORT.md  TMC9660_FOC_ABN_DEEP_DIVE_REPORT.md  TMCL_PARAM_SCAN_FAILURES.md  TMCL_PARAM_SCAN_POST_CONFIG.md  tmcl_param_scan_failures.csv  tmcl_scan_log_report.py
examples/esp32/main/: AdcManagerExample.cpp  CMakeLists.txt  CommChannelsManagerExample.cpp  EncoderManagerExample.cpp  GpioManagerExample.cpp  ImuManagerExample.cpp  Kconfig.projbuild  LedManagerExample.cpp  MotorControllerExample.cpp  TemperatureManagerExample.cpp  TestFramework.h  VortexApiExample.cpp  adc_calibration_test.cpp  encoder_imu_test.cpp  gpio_stress_test.cpp  led_temp_test.cpp  motor_controller_test.cpp  vortex_api_test.cpp  vortex_bldc_abn_as5047_dynamics.cpp  vortex_bldc_dynamics.cpp  vortex_bldc_open_loop.cpp  vortex_bldc_open_loop_uart.cpp  vortex_bldc_position_foc_as5047.cpp  vortex_bldc_probe.cpp  vortex_bldc_telemetry_sweep.cpp  vortex_bldc_torque_foc_hall.cpp  vortex_bldc_velocity_foc_abn.cpp  vortex_bldc_velocity_foc_hall.cpp  vortex_brake_dissipator_gpio.cpp  vortex_i2c_la_trace.cpp  vortex_i2c_scan_pcal_bno_pca.cpp  vortex_led_ws2812_cycle.cpp  vortex_led_ws2812_smoke.cpp  vortex_motor_comms_smoke.cpp  vortex_pcal_gpio_imu_bringup.cpp  vortex_tmcl_gap_smoke.cpp  vortex_tmcl_manual_compliance.cpp  vortex_tmcl_param_existence.cpp  vortex_tmcl_param_scan.cpp  vortex_tmcl_param_scan_post_config.cpp
examples/esp32/main/common/: vortex_api_test_strict_hw.hpp  vortex_bench_safety.hpp  vortex_board_pins.hpp  vortex_driver_reference.md  vortex_motor_bench_common.hpp  vortex_motor_bench_probe.hpp  vortex_motor_diagnostics.hpp  vortex_tmcl_manual_compliance.hpp  vortex_tmcl_param_existence.hpp  vortex_tmcl_read_probe.hpp
lib/api/: README.md  Vortex.cpp  Vortex.h  VortexVersion.h  VortexVersionManifest.cpp  VortexVersionManifest.h
lib/handlers/: As5047uHandler.cpp  As5047uHandler.h  Bno08xHandler.cpp  Bno08xHandler.h  Logger.cpp  NtcTemperatureHandler.cpp  NtcTemperatureHandler.h  Pca9685Handler.cpp  Pca9685Handler.h  Pcal95555Handler.cpp  Pcal95555Handler.h  Tmc9660AdcWrapper.cpp  Tmc9660AdcWrapper.h  Tmc9660Handler.cpp  Tmc9660Handler.h
lib/managers/: AdcManager.cpp  AdcManager.h  CMakeLists.txt  CommChannelsManager.cpp  CommChannelsManager.h  EncoderManager.cpp  EncoderManager.h  GpioManager.cpp  GpioManager.h  ImuManager.cpp  ImuManager.h  LedManager.cpp  LedManager.h  MotorController.cpp  MotorController.h  NvsManager.cpp  NvsManager.h  TemperatureManager.cpp  TemperatureManager.h
tests/component-handler/: GpioSystemIntegrationTest.cpp  I2cBusDeviceTest.cpp
tests/interface-wrapper/: CMakeLists.txt
